--- a/donate.html
+++ b/donate.html
@@ -73,11 +73,6 @@
                     <h1>Melhores Amigos para os Nossos Gatinhos</h1>
                     <p>Cada doação oferece esperança, cuidados médicos e amor para os nossos gatinhos à espera de um lar
                         para sempre.</p>
-                    <div class="carousel-cta">
-                        <a href="https://liberapay.com/amigatosdamilkinha/" class="carousel-main-btn" target="_blank">
-                            Fazer Doação
-                        </a>
-                    </div>
                 </div>
 
                 <div class="donate-hero-right">
@@ -171,10 +166,8 @@
         <div class="donate-about-container">
             <div class="donate-about-content">
                 <h2>Sobre Nós</h2>
-                <p>Somos uma organização comprometida com o resgate, cuidado e reabilitação de gatos abandonados. Cada
-                    gatinho recebe amor, cuidados médicos e a oportunidade de encontrar uma família para sempre.</p>
-                <p>Com o vosso apoio, conseguimos oferecer não apenas cuidados básicos, mas também tratamentos
-                    especializados, castração e muito amor até encontrarem o seu lar ideal.</p>
+                <p>Amigatos da Milkinha é uma organização sem fins lucrativos dedicada a salvar as vidas dos nossos amigos felinos em homenagem ao espírito indomável da nossa amada Milka. Com seu charme cativante e carinho sem limites, tocou o coração de todos que encontrou e deixou um vazio que prometemos preencher com propósito e compaixão.</p>
+                <p>A nossa associação é motivada pela crença de que todos os patudos merecem a oportunidade de uma vida feliz e saudável. Canalizamos o amor e a inspiração que bebemos da Milka num esforço incansável para resgatar, reabilitar e realojar gatos necessitados. Através do nosso compromisso com o seu bem-estar, esforçamo-nos por criar um mundo onde cada felino seja querido e receba o amor e o cuidado que merece.</p>
             </div>
             <div class="donate-about-image">
                 <img src="assets/img/Kitty.png" alt="Gatinho dos Amigos da Milkinha">
