--- a/index.html
+++ b/index.html
@@ -252,13 +252,10 @@
     <section class="about" id="sobre">
         <div class="about-container">
             <div class="about-content fade-in">
-                <h2 class="fade-in">Nossa<span class="italic-text"> Missão</span></h2>
-                <p>O Amigatos da Milkinha é mais do que um abrigo - é um lar temporário onde cada gato recebe amor,
-                    cuidado médico e a chance de encontrar uma família para sempre.</p>
-                <p>Trabalhamos incansavelmente para resgatar, reabilitar e realojar gatos abandonados,
-                    proporcionando-lhes uma segunda oportunidade de vida feliz.</p>
-                <p>Cada um dos nossos 42 gatos atuais tem sua própria história única e personalidade especial, esperando
-                    pelo momento certo para encontrar sua família perfeita.</p>
+                <h2 class="fade-in">Nossa<span class="italic-text">Missão</span></h2>
+                <p>Proteger e garantir o bem-estar de animais em situação de rua, resgatando, acolhendo, tratando e recuperando-os física e psicologicamente, promovendo a sua adoção responsável. </p>
+                <h2 class="fade-in">Nossa<span class="italic-text">Valores</span></h2>
+                <p>Respeito à vida, empatia, responsabilidade social, dedicação, transparência e colaboração comunitária. Nosso compromisso é oferecer aos animais abandonados uma nova chance de viver com dignidade.</p>
             </div>
             <div class="about-image fade-in">
                 <img src="https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?w=600&h=400&fit=crop"
@@ -439,8 +436,7 @@
                         </p>
 
                         <div class="important-note">
-                            <strong>Nota:</strong> Todos os nossos gatos são entregues castrados, vacinados,
-                            desparasitados e com chip de identificação incluídos no valor da adoção.
+                            <strong>Nota:</strong> Todos os gatos são entregues desparasitados e com microchip de identificação, já incluído no valor da adoção. Se tiverem idade suficiente, também são entregues esterilizados (a partir dos 6 meses) e vacinados (a partir dos 3 meses). Caso ainda não tenham idade, a responsabilidade de realizar esses procedimentos fica a cargo dos adotantes quando chegar a altura certa.
                         </div>
                     </div>
                     <div class="divider"></div>
@@ -497,8 +493,7 @@
 
                         <div class="highlight-box">
                             <div class="highlight-title">Horários de visita:</div>
-                            <p><strong>Segunda a Domingo:</strong> 9:00 às 18:00
-                                <!-- <strong>Localização:</strong> Rua Fonte do Mundo, nº 40, 4700-383 Braga -->
+                            <p><strong>Segunda a Domingo:</strong> Como funcionamos apenas com voluntários, as visitas precisam de marcação prévia (através dos nossos contactos), de forma a encontrar um horário que seja conveniente para todos.
                             </p>
                         </div>
 
@@ -539,15 +534,11 @@
                         </div>
 
                         <p>
-                            Crie um espaço seguro inicial (um quarto com tudo o que precisa) onde o gato possa
-                            adaptar-se gradualmente. Remova plantas tóxicas, secure janelas e varandas, e guarde objetos
-                            pequenos que possam ser engolidos.
+                            Remova plantas tóxicas, coloque redes de proteção nas janelas e varandas, e guarde objetos pequenos que possam ser engolidos
                         </p>
 
                         <div class="important-note">
-                            <strong>Período de adaptação:</strong> Tenha paciência! Alguns gatos adaptam-se em dias,
-                            outros podem precisar de semanas. Isso é completamente normal e não significa que o gato não
-                            é feliz.
+                            <strong>Período de adaptação:</strong> Seja paciente. Alguns gatos adaptam-se ao novo ambiente em poucos dias, outros podem precisar de algumas semanas até se sentirem mais à vontade. Isto é completamente normal e não significa que o gato não é feliz.
                         </div>
                     </div>
                     <div class="divider"></div>
@@ -560,9 +551,7 @@
                         <span class="accordion-icon">+</span>
                     </div>
                     <div class="accordion-content">
-                        <p>
-                            Sempre precisamos de ajuda! Há muitas formas de contribuir, desde cuidados diretos aos gatos
-                            até apoio administrativo e de divulgação.
+                        <p>Precisamos sempre de ajuda! Há muitas formas de contribuir, desde cuidados diretos aos gatos, até apoio admistrativo e de divulgação.
                         </p>
 
                         <div class="highlight-box">
@@ -577,8 +566,7 @@
 
                         <p>
                             Não é necessária experiência prévia - fornecemos toda a formação necessária! Pode começar
-                            gradualmente e escolher as atividades que mais se adequam às suas disponibilidades e
-                            preferências.
+                            gradualmente e escolher as atividades que mais se adequam à sua disponibilidade e preferencia.
                         </p>
 
                         <div class="important-note">
@@ -604,8 +592,8 @@
                         <div class="highlight-box">
                             <div class="highlight-title">Mais urgentes:</div>
                             <p><strong>Ração de qualidade</strong> (seca e húmida)<br>
-                                <strong>Areia sanitária</strong> aglomerante<br>
-                                <strong>Medicamentos</strong> (antibióticos, antiparasitários)<br>
+                                <strong>Areia sanitária</strong> (normal, aglomerante ou pellets de madeira) <br>
+                                <strong>Medicamentos</strong> (antibióticos, desparasitantes)<br>
                                 <strong>Material de limpeza</strong> (lixívia, detergentes)<br>
                                 <strong>Mantas e toalhas</strong> (mesmo usadas, desde que limpas)
                             </p>
@@ -617,7 +605,7 @@
                         </p>
 
                         <div class="important-note">
-                            <strong>Doações monetárias:</strong> IBAN disponível no nosso site ou pode entregar
+                            <strong>Doações monetárias:</strong>MbWay e IBAN disponível no nosso site ou pode entregar
                             pessoalmente. Emitimos recibos para todas as doações para fins de IRS.
                         </div>
                     </div>
@@ -631,9 +619,7 @@
                         <span class="accordion-icon">+</span>
                     </div>
                     <div class="accordion-content">
-                        <p>
-                            Primeiro, muito obrigado por se preocupar! Encontrar um gato perdido ou abandonado pode ser
-                            emotivo, mas há passos importantes a seguir.
+                        <p>Em primeiro lugar, obrigado por se preocupar! Encontrar um gato perdido ou abandonado pode ser uma experiência intensa, mas é importante seguir alguns passos.
                         </p>
 
                         <div class="highlight-box">
@@ -652,8 +638,7 @@
                         </p>
 
                         <div class="important-note">
-                            <strong>Importante:</strong> Não assuma imediatamente que está abandonado. Alguns gatos têm
-                            donos mas gostam de explorar. Sempre tente primeiro encontrar a família original.
+                            <strong>Importante:</strong>Não assuma logo que o gato está abandonado, alguns podem simplesmente estar perdidos. Tente sempre encontrar a família original.
                         </div>
                     </div>
                     <div class="divider"></div>
