--- a/index.html
+++ b/index.html
@@ -314,7 +314,6 @@
     <!-- =====================================================
     FAQ Section
     ===================================================== -->
-
     <section class="faq-section" id="faq">
         <div class="container">
             <div class="section-header">
@@ -450,8 +449,7 @@
                     </div>
                     <div class="accordion-content">
                         <p>
-                            A taxa de adoção é <strong>€85</strong> para gatos adultos e <strong>€75</strong> para gatos
-                            séniores (acima de 7 anos). Este valor cobre todos os cuidados veterinários já realizados.
+                            A taxa de adoção é <strong>€17,50</strong> para qualquer gato, independentemente da idade. Este valor cobre apenas o custo do microchip.
                         </p>
 
                         <div class="highlight-box">
