--- a/donate.html
+++ b/donate.html
@@ -71,8 +71,7 @@
 
                 <div class="donate-hero-center">
                     <h1>Melhores Amigos para os Nossos Gatinhos</h1>
-                    <p>Cada doação oferece esperança, cuidados médicos e amor para os nossos gatinhos à espera de um lar
-                        para sempre.</p>
+                    <p>Cada doação oferece esperança, cuidados médicos e amor para os nossos gatinhos à espera de um lar para sempre.</p>
                 </div>
 
                 <div class="donate-hero-right">
