--- a/cats_grid.html
+++ b/cats_grid.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Portuguese SEO -->
     <meta name="description"
-        content="Amigatos da Milkinha - abrigo de gatos em Braga. 42 gatos à espera de um lar. Adopção, voluntariado, donativos.">
+        content="Amigatos da Milkinha - abrigo de gatos em Braga. Gatos à espera de um lar. Adopção, voluntariado, donativos.">
     <meta name="keywords"
         content="abrigo de gatos, adopção de gatos, Braga, Portugal, voluntariado, donativos, felinos">
     <meta property="og:title" content="Amigatos da Milkinha - Abrigo de Gatos">
-    <meta property="og:description" content="Cada gato merece amor. 42 gatos procuram um lar para sempre.">
+    <meta property="og:description" content="Cada gato merece amor. Gatos procuram um lar para sempre.">
     <meta property="og:image" content="./assets/img/hero.png">
     <meta property="og:url" content="https://amigatosdamilkinha.pt">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="pt_PT">
+    
     <title>Amigatos da Milkinha - Abrigo de Gatos</title>
 
     <link rel="icon" href="./logo.png">
