--- a/donate.html
+++ b/donate.html
@@ -7,15 +7,16 @@
 
     <!-- Portuguese SEO -->
     <meta name="description"
-        content="Amigatos da Milkinha - abrigo de gatos em Braga. 42 gatos à espera de um lar. Adopção, voluntariado, donativos.">
+        content="Amigatos da Milkinha - abrigo de gatos em Braga. Gatos à espera de um lar. Adopção, voluntariado, donativos.">
     <meta name="keywords"
         content="abrigo de gatos, adopção de gatos, Braga, Portugal, voluntariado, donativos, felinos">
     <meta property="og:title" content="Amigatos da Milkinha - Abrigo de Gatos">
-    <meta property="og:description" content="Cada gato merece amor. 42 gatos procuram um lar para sempre.">
+    <meta property="og:description" content="Cada gato merece amor. Gatos procuram um lar para sempre.">
     <meta property="og:image" content="./assets/img/hero.png">
     <meta property="og:url" content="https://amigatosdamilkinha.pt">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="pt_PT">
+
     <title>Amigatos da Milkinha - Abrigo de Gatos</title>
 
     <link rel="icon" href="./logo.png">
@@ -71,7 +72,8 @@
 
                 <div class="donate-hero-center">
                     <h1>Melhores Amigos para os Nossos Gatinhos</h1>
-                    <p>Cada doação oferece esperança, cuidados médicos e amor para os nossos gatinhos à espera de um lar para sempre.</p>
+                    <p>Cada doação oferece esperança, cuidados médicos e amor para os nossos gatinhos à espera de um lar
+                        para sempre.</p>
                 </div>
 
                 <div class="donate-hero-right">
@@ -82,46 +84,90 @@
     </section>
 
     <!-- =====================================================
-    Help Section
-    ===================================================== -->
+ Help Section
+ ===================================================== -->
     <section class="help-section">
         <div class="help-wave"></div>
-
         <div class="help-content">
             <div class="help-section-container">
                 <div class="help-header">
                     <h2>Como Ajudar</h2>
                     <img src="assets/img/lines.svg" alt="Decorative lines" class="help-header-decoration">
                 </div>
-
                 <div class="help-items">
                     <div class="help-item">
                         <img src="assets/img/Medication.svg" alt="Medicação" class="help-item-icon">
                         <h3>Medicação</h3>
                     </div>
-
                     <div class="help-item">
                         <img src="assets/img/cat-food1.svg" alt="Ração" class="help-item-icon">
                         <h3>Ração</h3>
                     </div>
-
                     <div class="help-item">
                         <img src="assets/img/food.svg" alt="Patê" class="help-item-icon">
                         <h3>Patê</h3>
                     </div>
-
                     <div class="help-item">
                         <img src="assets/img/cat-toys.svg" alt="Brinquedos" class="help-item-icon">
                         <h3>Brinquedos</h3>
                     </div>
-
                     <div class="help-item">
                         <img src="assets/img/cat-litter.svg" alt="Areia" class="help-item-icon">
                         <h3>Areia</h3>
                     </div>
                 </div>
             </div>
+
+            <div class="help-bank-section">
+                <div class="help-bank-container">
+                    <!-- Info box -->
+                    <div class="help-payment-info">
+                        <p>As doações podem ser pontuais, mensais ou anuais.</p>
+                    </div>
+
+                    <!-- Payment methods -->
+                    <div class="help-payment-methods">
+                        <h3>Para doações pontuais:</h3>
+                        <div class="help-payment-methods-container">
+                            <div class="help-payment-method">
+                                <div class="help-method-label">
+                                    <strong>MBWay:</strong>
+                                </div>
+                                <div class="help-method-value">
+                                    964 768 620
+                                </div>
+                            </div>
+                            <div class="help-payment-method">
+                                <div class="help-method-label">
+                                    <strong>NIB:</strong>
+                                </div>
+                                <div class="help-method-value">
+                                    0036 0389 9910 3733 4059
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Recurring donations -->
+                    <div class="help-recurring">
+                        <h3>Doações recorrentes:</h3>
+                        <a href="https://liberapay.com/amigatosdamilkinha/" class="help-liberapay-btn" target="_blank">
+                            Apoiar via Liberapay
+                        </a>
+                    </div>
+
+                    <!-- Benefit notice -->
+                    <div class="help-benefit-notice">
+                        <p><strong>Benefício especial:</strong> Se contribuíres com uma doação anual de pelo menos
+                            <strong>18€</strong> tens direito a descontos com as nossas clínicas veterinárias com
+                            protocolo!
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <div class="help-wave-close"></div>
     </section>
 
     <!-- =====================================================
@@ -165,8 +211,15 @@
         <div class="donate-about-container">
             <div class="donate-about-content">
                 <h2>Sobre Nós</h2>
-                <p>Amigatos da Milkinha é uma organização sem fins lucrativos dedicada a salvar as vidas dos nossos amigos felinos em homenagem ao espírito indomável da nossa amada Milka. Com seu charme cativante e carinho sem limites, tocou o coração de todos que encontrou e deixou um vazio que prometemos preencher com propósito e compaixão.</p>
-                <p>A nossa associação é motivada pela crença de que todos os patudos merecem a oportunidade de uma vida feliz e saudável. Canalizamos o amor e a inspiração que bebemos da Milka num esforço incansável para resgatar, reabilitar e realojar gatos necessitados. Através do nosso compromisso com o seu bem-estar, esforçamo-nos por criar um mundo onde cada felino seja querido e receba o amor e o cuidado que merece.</p>
+                <p>Amigatos da Milkinha é uma organização sem fins lucrativos dedicada a salvar as vidas dos nossos
+                    amigos felinos em homenagem ao espírito indomável da nossa amada Milka. Com seu charme cativante e
+                    carinho sem limites, tocou o coração de todos que encontrou e deixou um vazio que prometemos
+                    preencher com propósito e compaixão.</p>
+                <p>A nossa associação é motivada pela crença de que todos os patudos merecem a oportunidade de uma vida
+                    feliz e saudável. Canalizamos o amor e a inspiração que bebemos da Milka num esforço incansável para
+                    resgatar, reabilitar e realojar gatos necessitados. Através do nosso compromisso com o seu
+                    bem-estar, esforçamo-nos por criar um mundo onde cada felino seja querido e receba o amor e o
+                    cuidado que merece.</p>
             </div>
             <div class="donate-about-image">
                 <img src="assets/img/Kitty.png" alt="Gatinho dos Amigos da Milkinha">
@@ -226,10 +279,12 @@
             <!-- Benefit notice -->
             <div class="donate-benefit-notice">
                 <p><strong>Benefício especial:</strong> Se contribuíres com uma doação anual de pelo menos
-                    <strong>18€</strong> tens direito a descontos com as nossas clínicas veterinárias com protocolo!</p>
+                    <strong>18€</strong> tens direito a descontos com as nossas clínicas veterinárias com protocolo!
+                </p>
             </div>
         </div>
     </section>
+
     <!-- ============================================
     Footer Section
     ============================================ -->
