--- a/donate.html
+++ b/donate.html
@@ -84,8 +84,8 @@
     </section>
 
     <!-- =====================================================
- Help Section
- ===================================================== -->
+    Help Section
+    ===================================================== -->
     <section class="help-section">
         <div class="help-wave"></div>
         <div class="help-content">
@@ -374,10 +374,10 @@
                             <img src="./assets/img/Map Point.svg" alt="Endereço" class="contact-icon">
                             <span>Rua Fonte do Mundo, nº 40<br>4700-383 Braga, Portugal</span>
                         </div> -->
-                        <div class="contact-item">
+                        <!-- <div class="contact-item">
                             <img src="./assets/img/Case.svg" alt="Horário" class="contact-icon">
                             <span>Seg-Dom 9:00-18:00</span>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
