--- a/index.html
+++ b/index.html
@@ -253,13 +253,13 @@
     <section class="about" id="sobre">
         <div class="about-container">
             <div class="about-content fade-in">
-                <h2 class="fade-in">Nossa<span class="italic-text">Missão</span></h2>
+                <h2 class="fade-in">Nossa<span class="italic-text"> Missão</span></h2>
                 <p>Proteger e garantir o bem-estar de animais em situação de rua, resgatando, acolhendo, tratando e recuperando-os física e psicologicamente, promovendo a sua adoção responsável. </p>
-                <h2 class="fade-in">Nossa<span class="italic-text">Valores</span></h2>
+                <h2 class="fade-in">Nossa<span class="italic-text"> Valores</span></h2>
                 <p>Respeito à vida, empatia, responsabilidade social, dedicação, transparência e colaboração comunitária. Nosso compromisso é oferecer aos animais abandonados uma nova chance de viver com dignidade.</p>
             </div>
             <div class="about-image fade-in">
-                <img src="https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?w=600&h=400&fit=crop"
+                <img src="assets/img/group.png"
                     alt="Gatos do abrigo" loading="lazy">
             </div>
         </div>
