--- a/donate.html
+++ b/donate.html
@@ -482,12 +482,17 @@
 
                 <div class="footer-bottom">
                     <div class="footer-copyright">
-                        © 2025 Amigatos da Milkinha. Todos os Direitos Reservados.
-                    </div>
-                    <div class="footer-bottom-links">
-                        <a href="#terms">Termos</a>
-                        <a href="#privacy">Privacidade</a>
-                        <a href="#cookies">Cookies</a>
+                        <div class="footer-left">
+                            <p>Made by <a href="http://yanaharcourt.dev" class="designer-link">Yana Harcourt</a></p>
+                        </div>
+                        <div class="footer-center">
+                            <p>© 2025 Amigatos da Milkinha. Todos os Direitos Reservados.</p>
+                        </div>
+                        <div class="footer-right">
+                            <a href="#">Termos</a>
+                            <a href="#">Privacidade</a>
+                            <a href="#">Cookies</a>
+                        </div>
                     </div>
                 </div>
             </div>
