--- a/cats_grid.html
+++ b/cats_grid.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://amigatosdamilkinha.pt">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="pt_PT">
-    
+
     <title>Amigatos da Milkinha - Abrigo de Gatos</title>
 
     <link rel="icon" href="./logo.png">
@@ -1164,12 +1164,17 @@
 
                 <div class="footer-bottom">
                     <div class="footer-copyright">
-                        © 2025 Amigatos da Milkinha. Todos os Direitos Reservados.
-                    </div>
-                    <div class="footer-bottom-links">
-                        <a href="#terms">Termos</a>
-                        <a href="#privacy">Privacidade</a>
-                        <a href="#cookies">Cookies</a>
+                        <div class="footer-left">
+                            <p>Made by <a href="http://yanaharcourt.dev" class="designer-link">Yana Harcourt</a></p>
+                        </div>
+                        <div class="footer-center">
+                            <p>© 2025 Amigatos da Milkinha. Todos os Direitos Reservados.</p>
+                        </div>
+                        <div class="footer-right">
+                            <a href="#">Termos</a>
+                            <a href="#">Privacidade</a>
+                            <a href="#">Cookies</a>
+                        </div>
                     </div>
                 </div>
             </div>
