--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://amigatosdamilkinha.pt">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="pt_PT">
-    
+
     <title>Amigatos da Milkinha - Abrigo de Gatos</title>
 
     <link rel="icon" href="./logo.png">
@@ -254,13 +254,15 @@
         <div class="about-container">
             <div class="about-content fade-in">
                 <h2 class="fade-in">Nossa<span class="italic-text"> Missão</span></h2>
-                <p>Proteger e garantir o bem-estar de animais em situação de rua, resgatando, acolhendo, tratando e recuperando-os física e psicologicamente, promovendo a sua adoção responsável. </p>
+                <p>Proteger e garantir o bem-estar de animais em situação de rua, resgatando, acolhendo, tratando e
+                    recuperando-os física e psicologicamente, promovendo a sua adoção responsável. </p>
                 <h2 class="fade-in">Nossa<span class="italic-text"> Valores</span></h2>
-                <p>Respeito à vida, empatia, responsabilidade social, dedicação, transparência e colaboração comunitária. Nosso compromisso é oferecer aos animais abandonados uma nova chance de viver com dignidade.</p>
+                <p>Respeito à vida, empatia, responsabilidade social, dedicação, transparência e colaboração
+                    comunitária. Nosso compromisso é oferecer aos animais abandonados uma nova chance de viver com
+                    dignidade.</p>
             </div>
             <div class="about-image fade-in">
-                <img src="assets/img/group.png"
-                    alt="Gatos do abrigo" loading="lazy">
+                <img src="assets/img/group.png" alt="Gatos do abrigo" loading="lazy">
             </div>
         </div>
     </section>
@@ -437,7 +439,11 @@
                         </p>
 
                         <div class="important-note">
-                            <strong>Nota:</strong> Todos os gatos são entregues desparasitados e com microchip de identificação, já incluído no valor da adoção. Se tiverem idade suficiente, também são entregues esterilizados (a partir dos 6 meses) e vacinados (a partir dos 3 meses). Caso ainda não tenham idade, a responsabilidade de realizar esses procedimentos fica a cargo dos adotantes quando chegar a altura certa.
+                            <strong>Nota:</strong> Todos os gatos são entregues desparasitados e com microchip de
+                            identificação, já incluído no valor da adoção. Se tiverem idade suficiente, também são
+                            entregues esterilizados (a partir dos 6 meses) e vacinados (a partir dos 3 meses). Caso
+                            ainda não tenham idade, a responsabilidade de realizar esses procedimentos fica a cargo dos
+                            adotantes quando chegar a altura certa.
                         </div>
                     </div>
                     <div class="divider"></div>
@@ -451,7 +457,8 @@
                     </div>
                     <div class="accordion-content">
                         <p>
-                           A taxa de adoção é <strong>€17,50</strong> para qualquer gato, independentemente da idade. Este valor cobre apenas o custo do microchip.
+                            A taxa de adoção é <strong>€17,50</strong> para qualquer gato, independentemente da idade.
+                            Este valor cobre apenas o custo do microchip.
                         </p>
 
                         <div class="highlight-box">
@@ -493,7 +500,9 @@
 
                         <div class="highlight-box">
                             <div class="highlight-title">Horários de visita:</div>
-                            <p><strong>Segunda a Domingo:</strong> Como funcionamos apenas com voluntários, as visitas precisam de marcação prévia (através dos nossos contactos), de forma a encontrar um horário que seja conveniente para todos.
+                            <p><strong>Segunda a Domingo:</strong> Como funcionamos apenas com voluntários, as visitas
+                                precisam de marcação prévia (através dos nossos contactos), de forma a encontrar um
+                                horário que seja conveniente para todos.
                             </p>
                         </div>
 
@@ -534,11 +543,14 @@
                         </div>
 
                         <p>
-                            Remova plantas tóxicas, coloque redes de proteção nas janelas e varandas, e guarde objetos pequenos que possam ser engolidos
+                            Remova plantas tóxicas, coloque redes de proteção nas janelas e varandas, e guarde objetos
+                            pequenos que possam ser engolidos
                         </p>
 
                         <div class="important-note">
-                            <strong>Período de adaptação:</strong> Seja paciente. Alguns gatos adaptam-se ao novo ambiente em poucos dias, outros podem precisar de algumas semanas até se sentirem mais à vontade. Isto é completamente normal e não significa que o gato não é feliz.
+                            <strong>Período de adaptação:</strong> Seja paciente. Alguns gatos adaptam-se ao novo
+                            ambiente em poucos dias, outros podem precisar de algumas semanas até se sentirem mais à
+                            vontade. Isto é completamente normal e não significa que o gato não é feliz.
                         </div>
                     </div>
                     <div class="divider"></div>
@@ -551,7 +563,8 @@
                         <span class="accordion-icon">+</span>
                     </div>
                     <div class="accordion-content">
-                        <p>Precisamos sempre de ajuda! Há muitas formas de contribuir, desde cuidados diretos aos gatos, até apoio admistrativo e de divulgação.
+                        <p>Precisamos sempre de ajuda! Há muitas formas de contribuir, desde cuidados diretos aos gatos,
+                            até apoio admistrativo e de divulgação.
                         </p>
 
                         <div class="highlight-box">
@@ -566,7 +579,8 @@
 
                         <p>
                             Não é necessária experiência prévia - fornecemos toda a formação necessária! Pode começar
-                            gradualmente e escolher as atividades que mais se adequam à sua disponibilidade e preferencia.
+                            gradualmente e escolher as atividades que mais se adequam à sua disponibilidade e
+                            preferencia.
                         </p>
 
                         <div class="important-note">
@@ -619,7 +633,8 @@
                         <span class="accordion-icon">+</span>
                     </div>
                     <div class="accordion-content">
-                        <p>Em primeiro lugar, obrigado por se preocupar! Encontrar um gato perdido ou abandonado pode ser uma experiência intensa, mas é importante seguir alguns passos.
+                        <p>Em primeiro lugar, obrigado por se preocupar! Encontrar um gato perdido ou abandonado pode
+                            ser uma experiência intensa, mas é importante seguir alguns passos.
                         </p>
 
                         <div class="highlight-box">
@@ -638,7 +653,8 @@
                         </p>
 
                         <div class="important-note">
-                            <strong>Importante:</strong>Não assuma logo que o gato está abandonado, alguns podem simplesmente estar perdidos. Tente sempre encontrar a família original.
+                            <strong>Importante:</strong>Não assuma logo que o gato está abandonado, alguns podem
+                            simplesmente estar perdidos. Tente sempre encontrar a família original.
                         </div>
                     </div>
                     <div class="divider"></div>
@@ -844,12 +860,17 @@
 
                 <div class="footer-bottom">
                     <div class="footer-copyright">
-                        © 2025 Amigatos da Milkinha. Todos os Direitos Reservados.
-                    </div>
-                    <div class="footer-bottom-links">
-                        <a href="#terms">Termos</a>
-                        <a href="#privacy">Privacidade</a>
-                        <a href="#cookies">Cookies</a>
+                        <div class="footer-left">
+                            <p>Made by <a href="http://yanaharcourt.dev" class="designer-link">Yana Harcourt</a></p>
+                        </div>
+                        <div class="footer-center">
+                            <p>© 2025 Amigatos da Milkinha. Todos os Direitos Reservados.</p>
+                        </div>
+                        <div class="footer-right">
+                            <a href="#">Termos</a>
+                            <a href="#">Privacidade</a>
+                            <a href="#">Cookies</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -859,7 +880,7 @@
     <!-- ============================================
     SCRIPTS
     ============================================ -->
-   
+
     <!--  ==============================
     Fade in animation 
     ============================== -->
