--- a/donate.html
+++ b/donate.html
@@ -302,7 +302,8 @@
                     <div class="contact-form">
                         <h3>Envie uma Mensagem</h3>
 
-                        <form action="https://formspree.io/f/mkgvewpy" method="POST" id="contactForm">
+                        <!-- <form action="https://formspree.io/f/mkgvewpy" method="POST" id="contactForm"> -->
+                        <form action="https://formspree.io/f/mkgvewpy" method="POST">
                             <div class="form-group form-row">
                                 <div>
                                     <label for="firstName">Nome *</label>
@@ -638,7 +639,7 @@
         });
         */
     </script>
-    
+
     <!-- Mobile Nav. menu -->
     <script>
         document.addEventListener('DOMContentLoaded', function () {
