--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                     <div class="contact-form">
                         <h3>Envie uma Mensagem</h3>
 
-                        <form action="https://formspree.io/f/mkgvewpy" method="POST" id="contactForm">
+                        <form action="https://formspree.io/f/mkgvewpy" method="POST">
                             <div class="form-group form-row">
                                 <div>
                                     <label for="firstName">Nome *</label>
