commit styles changes

--- a/cats_grid.html
+++ b/cats_grid.html
@@ -25,6 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/styles.css">
+    <link rel="stylesheet" href="./assets/cats_grid styles.css">
 </head>
 
 <body>
@@ -59,7 +60,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="cats-container">
         <div class="header">
             <h1>AMIGATOS DA MILKINHA</h1>
             <p>Atuais residentes no abrigo.</p>
